Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6690

Assertion failure 'PageFrameIndex < MmHighestPhysicalPage' during second stage

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • None
    • NTCore
    • None

    Description

      This somewhat regularly seems to appear on testbot now.

      Assertion 'PageFrameIndex < MmHighestPhysicalPage' failed at /srv/buildbot_cmake/full_cmake/build/ntoskrnl/mm/ARM3/pfnlist.c line 1311

      One of the backtrace variations is: https://www.reactos.org/sites/all/modules/reactos/testman/detail.php?id=9890187&prev=0

      Might be a case of pool corruption (if we're lucky, related to CORE-6685).

      Testbot log: http://build.reactos.org:8010/builders/Linux_AMD64_1%20KVM-Test/builds/1594/steps/test/logs/stdio

      Attachments

        Activity

          People

            ThePhysicist Timo Kreuzer
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: